<resources>
    <string name="app_name">Travel App</string>
    <string name="city">Melbourne</string>
    <string name="temp">18°C</string>
    <string name="description">Thunderstorm</string>
    <string name="humidity">18%</string>
    <string name="humidityDescription">Humidity</string>
    <string name="windDescription">Wind</string>
    <string name="wind">19km/h</string>
    <string name="precipitationDescription">Precipitation</string>
    <string name="precipitation">20%</string>
    <string name="visibilityDescription">Visibility</string>
    <string name="visibility">5km/h</string>
    <string name="clothing">Clothing</string>
    <string name="top">Top</string>
    <string name="topDescription">T-Shirt</string>
    <string name="bottomDescription">Bottom</string>
    <string name="bottom">Pant</string>
    <string name="add_cities">Add Cities</string>
    <string name="updated">Last Updated at</string>
    <string name="toggleunit">ToggleUnit</string>
    <string name="showdailyforecast">ShowDailyForecast</string>
    <string name="changelocation">ChangeLocation</string>
    <string name="addingcities">Search Cities</string>
    <string name="add_button">Add</string>
    <string name="day">Monday</string>
</resources>