<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="20sp"
    android:background="@drawable/___3"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:padding="10sp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/city"/>

            <TextView
                android:id="@+id/currentTemp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="40sp"
                android:textStyle="bold"
                android:text="@string/temp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:text="@string/description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="30sp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/humidityDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:text="@string/humidityDescription" />

                    <TextView
                        android:id="@+id/humidity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:text="@string/humidity" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/windDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:text="@string/windDescription" />

                    <TextView
                        android:id="@+id/wind"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:text="@string/wind" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10sp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/precipitationDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:text="@string/precipitationDescription" />

                    <TextView
                        android:id="@+id/precipitation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:text="@string/precipitation" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <TextView
                        android:id="@+id/visibilityDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:text="@string/visibilityDescription" />

                    <TextView
                        android:id="@+id/visibility"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:text="@string/visibility" />
                </LinearLayout>

            </LinearLayout>


            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:paddingTop="20sp"
                android:id="@+id/dailyRecycler"
                android:layout_height="wrap_content" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:srcCompat="@android:drawable/ic_menu_add" />


        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


  </LinearLayout>